fix overflow-x

--- a/src/site/_includes/postcss/_10_layout.css
+++ b/src/site/_includes/postcss/_10_layout.css
@@ -15,7 +15,7 @@
 */
 
 header {
-  //overflow-x: hidden;
+  overflow-x: hidden;
   @media screen and (min-width: $sm) and (max-width: $sme) {
     padding: 0 25px 0 25px;
   }
